syntax = "proto3";

package com.example.Uber_Backend;

option java_multiple_files = true;
option java_package = "com.example.Uber_Backend";
option java_outer_classname = "RideNotificationProto";

message RideNotificationRequest {
  int64 booking_id = 1;
  repeated int64 driver_ids = 2;
  double pickup_latitude = 3;
  double pickup_longitude = 4;
}

message RideNotificationResponse {
  bool success = 1;
  string message = 2;
}

message RideAcceptanceRequest {
  int64 booking_id = 1;
  int64 driver_id = 2;
}

message RideAcceptanceResponse {
  bool success = 1;
  string message = 2;
  int64 booking_id = 3;
}

service RideNotificationService {
  rpc NotifyDrivers(RideNotificationRequest) returns (RideNotificationResponse);
  rpc ConfirmRideAcceptance(RideAcceptanceRequest) returns (RideAcceptanceResponse);
}